fix: add simulation links

--- a/homework1/hw1.tex
+++ b/homework1/hw1.tex
@@ -15,7 +15,11 @@
 
 \maketitle
 
+Source: \href{https://github.com/lvjonok/f22-theoretical-mechanics/tree/master/homework1}{Github}
+
 \section{Task 1}
+
+\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/homework1/motion_task1.gif}{Simulation}
 
 Solution:
 
@@ -145,6 +149,8 @@ We can find curvature using this formula:
 \newpage
 
 \section{Task 2}
+
+\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/homework1/motion_task2.gif}{Simulation}
 
 Solution:
 
