--- a/homework1/hw1.tex
+++ b/homework1/hw1.tex
@@ -15,11 +15,11 @@
 
 \maketitle
 
-Source: \href{https://github.com/lvjonok/f22-theoretical-mechanics/tree/master/homework1}{Github}
+Source: \href{https://github.com/lvjonok/f22-theoretical-mechanics/tree/master/homework1}{Github repository}
 
 \section{Task 1}
 
-\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/homework1/motion_task1.gif}{Simulation}
+\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/homework1/motion_task1.gif}{Simulation link}
 
 Solution:
 
@@ -150,7 +150,7 @@ We can find curvature using this formula:
 
 \section{Task 2}
 
-\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/homework1/motion_task2.gif}{Simulation}
+\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/homework1/motion_task2.gif}{Simulation link}
 
 Solution:
 
