fix: update velocity of A

--- a/homework2/task1.tex
+++ b/homework2/task1.tex
@@ -74,13 +74,9 @@
 \href{https://www.youtube.com/watch?v=l7jCZV_lIHM}{meme link}
 
 \begin{enumerate}
-    \item Velocity of point $A$
-          Obviously, it is a rotation around point $O_1$:
+    \item Velocity of point $A$:
           \begin{align}
-              \vec{v_A(t)} = \omega \cdot O_1A \cdot \begin{bmatrix}
-                  -\sin(\phi) \\
-                  \cos(\phi)
-              \end{bmatrix}
+              \vec{v_A(t)} = \dot{\vec{r_A}}(t) = \omega \cdot \vec{r_A}(t)
           \end{align}
 
     \item Velocity of point $B$ can be found as follows:
