fix: update link

--- a/_posts/2022-09-14-homework2.md
+++ b/_posts/2022-09-14-homework2.md
@@ -9,8 +9,8 @@ title: Homework 2
 
 ## Task 1:
 
-![Simulation 1](https://github.com/lvjonok/f22-theoretical-mechanics/raw/master/homework2/motion_task1.gif)
+![Simulation 1]({{ site.baseurl }}/homework2/motion_task1.gif)
 
 ## Task 2:
 
-[Simulation 2](/homework2/task2/dist/client/index.html)
+[Simulation 2]({{ site.baseurl }}/homework2/task2/dist/client/index.html)
