fix: answer highlighted, animation for task2 prettified

--- a/homework2/hw2.tex
+++ b/homework2/hw2.tex
@@ -3,6 +3,7 @@
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage{physics}
+\usepackage{amsfonts}
 \usepackage[most]{tcolorbox}
 \usepackage[utf8]{inputenc}
 % \usepackage[dvipsnames]{xcolor}
@@ -20,6 +21,8 @@ boxrule=0pt,boxsep=0pt,breakable}
 \begin{document}
 
 \maketitle
+
+\href{https://lvjonok.github.io/f22-theoretical-mechanics/2022/09/14/homework2.html}{Homework 2 webpage}
 
 \input{task1.tex}
 
