--- a/homework2/task2.tex
+++ b/homework2/task2.tex
@@ -1,5 +1,7 @@
 \section{Task 2}
 
+\href{https://lvjonok.github.io/f22-theoretical-mechanics/homework2/task2/dist/client/index.html}{simulation}
+
 \subsection{Derivation of angle of rotation around $Z$}
 
 As $\omega_1$ and $\epsilon_1$ are given, we can convert them to $\phi(t)$:
