fix: replaced gif

--- a/_posts/2022-09-14-homework2.md
+++ b/_posts/2022-09-14-homework2.md
@@ -9,7 +9,7 @@ title: Homework 2
 
 ## Task 1:
 
-![Simulation 1]({{ site.baseurl }}/homework2/motion_task1.gif)
+![Simulation 1](https://raw.githubusercontent.com/lvjonok/f22-theoretical-mechanics/master/homework2/motion_task1.gif)
 
 ## Task 2:
 
