feat: add links

--- a/homework3/hw3.tex
+++ b/homework3/hw3.tex
@@ -24,7 +24,7 @@ boxrule=0pt,boxsep=0pt,breakable}
 
 \maketitle
 
-% \href{https://lvjonok.github.io/f22-theoretical-mechanics/2022/09/14/homework2.html}{Homework 2 webpage}
+\href{https://lvjonok.github.io/f22-theoretical-mechanics/2022/09/18/homework3.html}{Homework 3 webpage}
 
 \input{task1.tex}
 
