--- a/homework3/task1.tex
+++ b/homework3/task1.tex
@@ -1,5 +1,9 @@
 \section{Task 1}
 
+\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/homework3/task1.ipynb}{Source code}
+
+\href{https://lvjonok.github.io/f22-theoretical-mechanics/2022/09/18/homework3.html}{Simulations}
+
 \begin{enumerate}
     \item I assume point $M$ moves from A to B,
           so I actually have not $OM$, but rather $AO$ in motion equation.
