--- a/homework3/task2.tex
+++ b/homework3/task2.tex
@@ -1,5 +1,10 @@
 \section{Task 2}
 
+
+\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/homework3/task2.ipynb}{Source code}
+
+\href{https://lvjonok.github.io/f22-theoretical-mechanics/2022/09/18/homework3.html}{Simulations}
+
 \begin{enumerate}
     \item Find derivatives of motion and angle equations:
           Equation of motion
