--- a/research1/main.tex
+++ b/research1/main.tex
@@ -26,7 +26,7 @@ boxrule=0pt,boxsep=0pt,breakable}
 
 \section*{Solution}
 
-\subsection*{Disclaimer}
+\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/research1/main.ipynb}{Source code}
 
 \begin{enumerate}
       \item Introduce basic equations:
