feat: add tools

--- a/research1/main.tex
+++ b/research1/main.tex
@@ -24,6 +24,13 @@ boxrule=0pt,boxsep=0pt,breakable}
 
 \maketitle
 
+\subsection*{Tools}
+
+\begin{itemize}
+      \item Python
+      \item Numpy, matplotlib
+\end{itemize}
+
 \section*{Solution}
 
 \href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/research1/main.ipynb}{Source code}
