feat: add links

--- a/homework4/hw4.tex
+++ b/homework4/hw4.tex
@@ -24,7 +24,9 @@ boxrule=0pt,boxsep=0pt,breakable}
 
 \maketitle
 
-\href{https://lvjonok.github.io/f22-theoretical-mechanics/2022/09/18/homework3.html}{Homework 4 webpage}
+\href{https://lvjonok.github.io/f22-theoretical-mechanics/2022/09/28/homework4.html}{Homework 4 webpage}
+
+\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/homework4/main.ipynb}{Homework 4 notebook}
 
 \input{task1.tex}
 
