fix: hooray final fixes

--- a/homework5/hw5.tex
+++ b/homework5/hw5.tex
@@ -24,9 +24,7 @@ boxrule=0pt,boxsep=0pt,breakable}
 
 \maketitle
 
-\href{https://lvjonok.github.io/f22-theoretical-mechanics/2022/09/28/homework4.html}{Homework 4 webpage}
-
-\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/homework4/main.ipynb}{Homework 4 notebook}
+\href{https://github.com/lvjonok/f22-theoretical-mechanics/tree/master/homework5}{Source code}
 
 \input{task1.tex}
 
