--- a/homework5/task1.tex
+++ b/homework5/task1.tex
@@ -137,6 +137,10 @@ Too lazy to draw in tikz, so here you are.
               \item Result: \\
                     An angle to shoot officer is $\approx 0.0324$
           \end{enumerate}
+    \item Air resistance force: \\
+          \includegraphics[width=\linewidth]{task1force.png}
+    \item Trajectory with resistance: \\
+          \includegraphics[width=\linewidth]{trajectory.png}
 \end{enumerate}
 
 \begin{answer}
