--- a/homework5/task2.tex
+++ b/homework5/task2.tex
@@ -1,5 +1,7 @@
 \subsection*{Task 2}
 
+\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/homework5/task2.gif}{simulation}
+
 \includegraphics[width=\linewidth]{task2.png}
 
 \begin{enumerate}
@@ -25,7 +27,7 @@
           \begin{enumerate}
               \item Equation on x(not static) axis:
                     \begin{align}
-                        mx'' = \sum F_x + \Phi_{tr} + \Phi_{cor} \\
+                        mx'' = \sum F_x + \Phi_{tr x} + \Phi_{cor x} \\
                         mx'' = mg \sin(\omega t) + m \omega^2 x
                     \end{align}
                     As coriolis acceleration is $\vec{a}_{cor} = 2 (\vec{w}_{tr} \times \vec{v}_{rel})$,
