--- a/homework7/task1.tex
+++ b/homework7/task1.tex
@@ -1,5 +1,7 @@
 \subsection*{Task 1}
 
+\href{https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/homework7/res.gif}{Simulation}
+
 \includegraphics[width=0.5\linewidth]{task1.png}
 
 \begin{enumerate}
