fix: try load the whole report

--- a/_posts/2022-10-21-research2.md
+++ b/_posts/2022-10-21-research2.md
@@ -3,4 +3,235 @@ layout: default
 title: Research 2
 ---
 
-[Simulation 2]({{ site.baseurl }}/research2/rh2.html)
+# Research Homework 2
+
+**Emails:** 
+- i.alentev@innopolis.university
+- l.kozlov@innopolis.university
+- a.eremov@innopolis.university
+- i.domrachev@innopolis.university
+
+## Stack:
+
+- Jupyter Notebook
+- python3
+- numpy
+- sympy
+- scipy
+- matplotlib
+- OpenCV
+- ffmpeg
+
+## Table of Contents:
+
+![](https://i.imgur.com/EoXtoYY.jpg)
+
+# Experiment procedure
+Almost whole group participated in experiment. Experiment was conducted in several steps
+
+[Video materials from the experiment.](https://drive.google.com/file/d/1XCtMtXvvDQwJ7TuviUv3RbdigAncmnSR/view?usp=sharing)
+
+![](https://i.imgur.com/tF7lUDi.jpg)
+
+### Step 1 - Equipment
+We prepared an equipment to make an experiment. 
+- A camera to record a video with extended amount of frames (up to 180 frames per second). 
+- Some rulers to show the scale on video.
+- YoYo itself. YoYo was signed with several colored markers in order to further programmatically detect it's parameters.
+### Step 2 - Stand
+We prepared a stand which was further used to make and experiment. A stand had a built in ruler to demonstrate the height of the yoyo during the experiment. 
+
+![Here goes image of the stand w/w/o yoyo](https://i.imgur.com/VUFLGj1.png)
+
+### Step 3 - Recording
+We used several cameras to record different aspects of yoyo's movement.
+- One camera was used to record it's displacement
+- One camera was placed below to calculate angles of rotations
+- Yellow and black markering was used to locate yoyo on the recording
+
+![](https://i.imgur.com/dv8fHOL.jpg)
+
+### Step 4 - Experiment result analysis
+We recorded 3 given yoyo and 1 factory-made yoyo. After that we started video analysing and understood that only data from one given yoyo approximately good. In 3 other given yoyos string was connected not to the center, instead it was at the offsetted side of yoyo axis. Therefore, yoyo have offseted center of mass and excessive precession. Excessive precession take energy from the rotation and motion of yoyo became less predictable and exorbitanly complex. Hence, we realised that only one dataset with factory-made yoyo will be good for our next analysis.
+![Alt](https://i.imgur.com/UvncCYQ.png "The illustration of precession")<center>*The illustration of precession*</center>
+
+
+# Preprocessing and data analysis
+![](https://i.imgur.com/gA11o9d.jpg)
+
+Several steps were applied for videos to find `y` position of yo-yo.
+
+1. Find start and finish frames for videos and crop them
+2. Find region of interest (rectange which is not left by yo-yo) and crop them.
+3. We coloured yo-yo to provide experiment in order to calculate motion from several markers using CV, but it was very hard and we skipped this task.
+4. Join two masks for yellow and black color to distringuish yo-yo from background and find its position.
+![](https://i.imgur.com/oYvKlym.png)
+![](https://i.imgur.com/HgpAEc3.png)
+5. In order to convert from pixels to sm, we took several guide points from ruler in raw video and interpolated this function.
+![](https://i.imgur.com/9CsVQGU.png)
+However, it was pretty much neglectable.
+![](https://i.imgur.com/qzDwKh9.png)
+
+## Oscillations calculation
+
+For oscillations analysis function of `y` was processed by median filter and extremas were found. After that oscillations where difference between peaks was less than `2 cm` were removed. After some point such oscillations in `y` were produced by `pendulum-like` movement of yo-yo with small deviation in `x` coordinate, which we wanted to neglect.
+
+![](https://i.imgur.com/VBib8EF.png)
+
+
+## Preprocessing results
+![](https://i.imgur.com/E6sgDBJ.png)
+![](https://i.imgur.com/fKueOGG.png)
+![](https://i.imgur.com/T7WLu0O.png)
+![](https://i.imgur.com/meq1VIB.png)
+![](https://i.imgur.com/a291BoQ.png)
+
+
+## Tables
+### Table 1
+Initial string length over the number of oscillations; (Mean value and STD)
+|   l | oscillations     |    mean |      std |
+|----|-----------------|--------|---------|
+|  20 | [8, 10, 8, 20]   | 11.5    | 4.97494  |
+|  30 | [12, 13, 12]     | 12.3333 | 0.471405 |
+|  40 | [11, 16]         | 13.5    | 2.5      |
+|  50 | [9, 6, 13, 6, 9] | 8.6    | 2.57682  |
+|  60 | [7, 9]           | 8      | 1        |
+
+
+### Table 2
+Max distance from bottom position (oscillation amplitude) over oscillation; (Mean value and STD)
+
+|   l | max-stretch                              |   stretch-mean |   stretch-std |
+|----:|:-----------------------------------------|---------------:|--------------:|
+|  20 | [16.875, 13.288, 9.859, 8.873]           |        12.2237 |       3.14588 |
+|  30 | [19.028, 18.681, 21.597]                 |        19.7687 |       1.30057 |
+|  40 | [19.444, 22.083]                         |        20.7635 |       1.3195  |
+|  50 | [27.067, 18.611, 22.917, 31.042, 31.458] |        26.219  |       4.90331 |
+|  60 | [40.0, 36.959]                           |        38.4795 |       1.5205  |
+
+![](https://i.imgur.com/0TvQkRe.jpg)
+
+
+# Mathematical Modelling
+
+## Environmental constraints
+
+### Gravitational acceleration
+To build as precise mathematical model, as possible, we have to calculate constants specifically for our environment.
+
+First of all, we have to find our latitude and longitude. 
+`55.75313 N`
+`48.74426 E`
+Secondly, we should find our elevation: 193m +- 15
+We can find the [radius of the Earth at a given coordinates](https://planetcalc.ru/7721/), which equals $6363563.707315026m$, add up the elevation and calculate gravitational acceleration according to the formula. Finally, we get the following result:
+
+$$g = \frac{GM}{R^2} = 9.8418913692$$
+
+### Air Drag (viscosity friction)
+
+Due to assumption of our model (see below), all frictions are viscous, which are proportional to the rotational velocity of the yoyo. During the model testing, we determined that the proportional coefficient equals to $\mu = 0.00125$.
+
+### Inertia 
+
+$$I_x = 0.000020159$$
+$$I_y = 0.000024800$$
+$$I_z = 0.000020384$$
+
+## Model
+
+In order to develop our model, we took the following assumptions:
+1. The diameter and the mass of the string are neglected.
+2. The yo-yo moves only along vertical axis and rotates around axis, perpendicular to it. All other displacements and rotations are neglected
+3. All frictions are viscous and proportional to the angular velocity
+
+Also, we would use the following variables:
+* $h$ -- height of yo-yo's origin
+* $l$ -- length of the string
+* $z$ -- height of the yo-yo
+* $\theta$ -- angle of the yo-yo's rotation
+* $r$ -- radius of yoyo axle
+* $\mu$ -- friction coefficient
+
+![](https://i.imgur.com/Mt6bwVj.png)
+
+
+**Research object:** 1 object, plane motion
+**Degrees of Freedom:** 1, angle of yoyo $\theta$
+**Method:** Equation for moment of inertia 
+**Kinematic analysis:** 
+$$l = r\theta = h - z$$
+**Force analysis:**
+    $$\underline{\underline{\vec{mg}}},\, \underline{\vec{T}},\, \underline{\underline{\vec{F_r}}},\,  F_r = \mu\dot{\theta}$$  
+
+**Solution**
+The equation for moment of inertia is:
+$$\frac{dL}{dt} = \sum \vec{M}(\vec{F^E_i}) = \vec{M}(\vec{T}) + \vec{M}(\vec{F_r})$$
+$$L = J_y\omega = J_y\dot{\theta} \implies \frac{dL}{dt} = J_y \ddot{\theta}$$
+$$\vec{M}(\vec{F_r}) = -r\mu\dot{\theta}$$
+
+To get tention of the string, let's consider 2nd Newton Law:
+$$m\ddot{l} = \pm mg + T$$
+Where $T$ has positive sigh for descending movement and negative sign for positive movement. 
+$$T = m(r\ddot{\theta} \mp g)$$
+$$\vec{M}(\vec{T}) = rT = rm(r\ddot{\theta} \mp g)$$
+
+Hence: 
+
+$$J_y\ddot{\theta} = -rm(r\ddot{\theta} \mp g) - r\mu\dot{\theta}$$
+
+---
+
+The final model is:
+$$(J_y + r^2m)\ddot{\theta} = \pm mrg - r\mu\dot{\theta}$$
+Where $+$ sigh corresponds for descending movement and $-$ sign for positive movement.
+
+---
+## Models analysis
+
+During the research of the given problem, we have compared several approaches and analysed existing approaches. 
+
+One of the main approaches to this problem was the following work:
+```
+K. Hashimoto and T. Noritsugu, 
+"Modeling and control of robotic yo-yo with visual feedback," 
+Proceedings of IEEE International Conference on Robotics and Automation, 1996, 
+pp. 2650-2655 vol.3, doi: 10.1109/ROBOT.1996.506562.
+```
+
+However, this work assumes that YoYo is controlled by the manipulator. It does not reflect our experiment, so we had to rework the mathematical model.
+
+### Models comparison
+![](https://i.imgur.com/eZS4GV6.png)
+
+
+After a small research we have found a work on this topic from a previous year student - **Mirna Alnoukari** ([github](https://github.com/mirnanoukari/Theoretical-Mechanics/blob/main/Assignment%202/Report.pdf)). Further on we will compare our model with hers. 
+
+![](https://i.imgur.com/Hwohlqu.png)
+![](https://i.imgur.com/lxJ85Fq.png)
+![](https://i.imgur.com/C0CrFq2.png)
+
+
+As we can see, even though general behavour relatively the same, our model much more reflects the real behaviour of the system on several experiments. [Other experiments comparisons](https://github.com/lvjonok/f22-theoretical-mechanics/tree/master/research2/reportimages).
+
+### Analysis conclusion
+
+Even though performance of existing models was satisfactory, we have completely rebuilt and fine-tuned parameters and laws to our current environment in such a way that our model simulates the real behaviour much more accurately than solutions we could test.
+
+![](https://i.imgur.com/8R32D6b.png)
+
+(Other examples can be found on the same github page)
+
+Our analysis shown, that inaccuracies are caused not only by the model, but also by the preprocessing, since it is quite difficult to accurately measure the position of yoyo. As a result, we think that it is mainly important to build a model with coinciding phases rather than trying to predict the offset.
+
+The following examples follow our assumption:
+
+
+![](https://i.imgur.com/cQBfPjn.png)
+
+![](https://i.imgur.com/wwfsofu.png)
+
+# Simulation code
+![](https://i.imgur.com/b1xaHAq.jpg)
+
+Code can be seen here [Link to github](https://github.com/lvjonok/f22-theoretical-mechanics/blob/master/research2/sim.py)
